tests/agl/rejections/type/ctor_unknown_field.agl
record P
  n: int
let p = P(n: 1, extra: 2)
